--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "babel-polyfill": "^6.26.0",
     "lodash": "^4.17.15",
     "react": "^16.9.0",
-    "react-dom": "^16.9.0"
+    "react-dom": "^16.9.0",
+    "socket.io-client": "^2.3.0"
   },
   "scripts": {
     "prod": "NODE_ENV=1 webpack",
